fix the overflowing issue

--- a/themes/src/main/resources-product/theme/rh-sso/login/resources/css/login-rhsso.css
+++ b/themes/src/main/resources-product/theme/rh-sso/login/resources/css/login-rhsso.css
@@ -1,6 +1,5 @@
 .login-pf body {
     background-image: url(../node_modules/rcue/dist/img/bg-login.png);
-    background-size: auto;
 }
 
 @media (max-width: 767px) {
